--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello AFE!</string>
     <string name="menu_settings">Settings</string>
     <string name="servertoggle">ServerToggle</string>
+    <string name="title_activity_socket">AFE</string>
 
 </resources>
